--- a/src/components/QueryPage/QueryPage.css
+++ b/src/components/QueryPage/QueryPage.css
@@ -3,14 +3,14 @@
     margin: 20px auto;
     padding: 20px;
     text-align: center;
-    background: #f9f9f9;
+    background: #f5e9e9;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     transition: background 0.3s, color 0.3s;
   }
   
   .dark-mode {
-    background: #121212;
+    background:  #800040;
     color: white;
   }
   
@@ -26,6 +26,8 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 14px;
+    background-color: #f5e9e9;
+    
   }
   
   .fixed-queries {
@@ -45,13 +47,13 @@
     border-radius: 5px;
     cursor: pointer;
     transition: transform 0.2s;
-    background: #007bff;
+    background: black;
     color: white;
   }
   
   .query-button:hover {
     transform: scale(1.05);
-    background: #0056b3;
+    background: rgb(56, 55, 55)
   }
   
   /* Pop-up Box */
@@ -79,7 +81,7 @@
     margin-top: 10px;
     padding: 8px;
     border: none;
-    background: red;
+    background: black;
     color: white;
     cursor: pointer;
   }
@@ -96,7 +98,7 @@
   }
   
   .results-table th {
-    background: #007bff;
+    background: black;
     color: white;
   }
   
@@ -106,3 +108,7 @@
     border-radius: 5px;
   }
   
+  .toggle-button:hover{
+    background-color: #800040;
+    color: white;
+  }
